Addition of auth